- Fixed bugs in MonoFont and Font.  - Added tinyfontmono.c

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -234,6 +234,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\woopsi\tinyfontmono.c"
+				>
+			</File>
+			<File
 				RelativePath=".\woopsi\window.cpp"
 				>
 			</File>
