- Moved all header includes out of woopsi.h into new woopsiheaders.h file.

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -499,6 +499,10 @@
 				RelativePath=".\woopsi\woopsifuncs.h"
 				>
 			</File>
+			<File
+				RelativePath=".\woopsi\woopsiheaders.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
