- Added FixedWidthFontBase base class for fixed width fonts.  - Removed all fixed-width code from FontBase.  - Upgraded gadgets to support proportional-width fonts (excluding MultiLineTextBox).

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -94,6 +94,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\woopsi\fixedwidthfontbase.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\woopsi\font.cpp"
 				>
 			</File>
@@ -333,6 +337,10 @@
 			</File>
 			<File
 				RelativePath=".\woopsi\eventhandler.h"
+				>
+			</File>
+			<File
+				RelativePath=".\woopsi\fixedwidthfontbase.h"
 				>
 			</File>
 			<File
