- ContextMenu adjusts so that it always fits within the confines of a DS' screen.

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -541,6 +541,10 @@
 				RelativePath=".\data\logo_wifi.bmp"
 				>
 			</File>
+			<File
+				RelativePath=".\Release\Woopsi.nds"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Source Files"
