- Moved abstract methods out of FontBase not needed by all fonts.  - Renamed "checkGlyphData()" in font classes to "isCharBlank()".  - Moved more code out of FontBase into FixedWidthFontBase.  - Changed FontBase::clearColour() to support Jeff's new font classes.  - Added PackedFontBase, PackedFont1 and PackedFont16 classes (proportional font support).  - Added "pythonscripts" folder with Jeff's "bmp2font" Python script for creating PackedFont-compatible fonts.

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -126,6 +126,18 @@
 				>
 			</File>
 			<File
+				RelativePath=".\woopsi\packedfont1.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\woopsi\packedfont16.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\woopsi\packedfontbase.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\woopsi\radiobutton.cpp"
 				>
 			</File>
@@ -373,6 +385,18 @@
 			</File>
 			<File
 				RelativePath=".\woopsi\multilinetextbox.h"
+				>
+			</File>
+			<File
+				RelativePath=".\woopsi\packedfont1.h"
+				>
+			</File>
+			<File
+				RelativePath=".\woopsi\packedfont16.h"
+				>
+			</File>
+			<File
+				RelativePath=".\woopsi\packedfontbase.h"
 				>
 			</File>
 			<File
