--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -118,6 +118,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\woopsi\listbox.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\woopsi\listboxitem.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\woopsi\monofont.cpp"
 				>
 			</File>
@@ -377,6 +385,14 @@
 			</File>
 			<File
 				RelativePath=".\woopsi\graphicsport.h"
+				>
+			</File>
+			<File
+				RelativePath=".\woopsi\listbox.h"
+				>
+			</File>
+			<File
+				RelativePath=".\woopsi\listboxitem.h"
 				>
 			</File>
 			<File
