- Switched demo code to follow Jeff's design pattern.

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -582,6 +582,10 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
+				RelativePath=".\source\demo.h"
+				>
+			</File>
+			<File
 				RelativePath=".\data\logo.bmp"
 				>
 			</File>
@@ -595,6 +599,10 @@
 			>
 			<File
 				RelativePath=".\source\calculator.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\source\demo.cpp"
 				>
 			</File>
 			<File
