--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -174,6 +174,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\woopsi\scrollinglistbox.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\woopsi\scrollingpanel.cpp"
 				>
 			</File>
@@ -287,6 +291,10 @@
 			</File>
 			<File
 				RelativePath=".\woopsi\woopsi.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Release\Woopsi.nds"
 				>
 			</File>
 			<File
@@ -449,6 +457,10 @@
 			</File>
 			<File
 				RelativePath=".\woopsi\scrollbarvertical.h"
+				>
+			</File>
+			<File
+				RelativePath=".\woopsi\scrollinglistbox.h"
 				>
 			</File>
 			<File
