--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -372,6 +372,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\woopsi\dimmedscreen.h"
+				>
+			</File>
+			<File
 				RelativePath=".\woopsi\dynamicarray.h"
 				>
 			</File>
