- Added ListData class.  - Stripped option handling out of ListBox and moved it into ListData class.

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -130,6 +130,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\woopsi\listdata.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\woopsi\monofont.cpp"
 				>
 			</File>
@@ -413,6 +417,10 @@
 			</File>
 			<File
 				RelativePath=".\woopsi\listbox.h"
+				>
+			</File>
+			<File
+				RelativePath=".\woopsi\listdata.h"
 				>
 			</File>
 			<File
