- Swapped back from Glyphs enum to defines.  - Added WoopsiKey class.  - Keyboard developments.  - Updated sysfont to match bitmap.

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -310,6 +310,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\woopsi\woopsikey.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\woopsi\woopsikeyboard.cpp"
 				>
 			</File>
@@ -609,6 +613,10 @@
 			</File>
 			<File
 				RelativePath=".\woopsi\woopsiheaders.h"
+				>
+			</File>
+			<File
+				RelativePath=".\woopsi\woopsikey.h"
 				>
 			</File>
 			<File
