- Replaced unused Bitmap struct with a Bitmap class with drawing routines.  - Removed unused "bitmap.h" include from "skin.h".

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -66,6 +66,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\woopsi\bitmap.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\woopsi\bitmapbutton.cpp"
 				>
 			</File>
