- ListData class raises events to ListDataEventHandler objects.

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -460,6 +460,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\woopsi\listdataeventhandler.h"
+				>
+			</File>
+			<File
 				RelativePath=".\woopsi\monofont.h"
 				>
 			</File>
