- Refactored gadget event system:    - Replaced EventArgs struct with GadgetEventArgs class.    - Renamed EventHandler to GadgetEventHandler.    - Gadgets can now have multiple event handlers.    - Replaced handleEvent() method with multiple methods.

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -440,6 +440,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\woopsi\gadgeteventargs.h"
+				>
+			</File>
+			<File
 				RelativePath=".\woopsi\glyphs.h"
 				>
 			</File>
