- ListData events passed by references instead of pointers.  - WoopsiKeyboard includes a set of new events:    - Press    - Release    - Repeat  - WoopsiKeyboard no longer stores the last key clicked.  - WoopsiKeyboard has set of event-related classes:    - KeyboardEventHandler    - KeyboardEventArgs

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -456,6 +456,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\woopsi\keyboardeventargs.h"
+				>
+			</File>
+			<File
+				RelativePath=".\woopsi\keyboardeventhandler.h"
+				>
+			</File>
+			<File
 				RelativePath=".\woopsi\label.h"
 				>
 			</File>
