- Deleted old icon folder.  - Demo makefile uses new icon location.

--- a/Woopsi/Makefile
+++ b/Woopsi/Makefile
@@ -9,7 +9,7 @@ TEXT1 		:= Woopsi Project
 TEXT2 		:= Using Woopsi
 TEXT3 		:= ant.simianzombie.com
 
-ICON 		:= -b $(CURDIR)/../icon/logo.bmp
+ICON 		:= -b $(CURDIR)/../libwoopsi/icon/logo.bmp
 
 #-------------------------------------------------------------------------------
 # TARGET is the name of the output file
