- Added BitmapBase class to define basic interface for a bitmap.  - Added BitmapWrapper to enable included (not loaded) bitmap data to be used as a read-only Bitmap object.

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -75,6 +75,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\libwoopsi\src\bitmapwrapper.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\libwoopsi\src\button.cpp"
 				>
 			</File>
@@ -329,7 +333,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\libwoopsi\include\bitmapbase.h"
+				>
+			</File>
+			<File
 				RelativePath=".\libwoopsi\include\bitmapbutton.h"
+				>
+			</File>
+			<File
+				RelativePath=".\libwoopsi\include\bitmapwrapper.h"
 				>
 			</File>
 			<File
