--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -135,6 +135,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\libwoopsi\src\graphics.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\libwoopsi\src\graphicsport.cpp"
 				>
 			</File>
@@ -430,6 +434,10 @@
 			</File>
 			<File
 				RelativePath=".\libwoopsi\include\gradient.h"
+				>
+			</File>
+			<File
+				RelativePath=".\libwoopsi\include\graphics.h"
 				>
 			</File>
 			<File
