- Rect struct moved out of Gadget class and into separate header.

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -555,6 +555,10 @@
 						>
 					</File>
 					<File
+						RelativePath=".\libwoopsi\include\rect.h"
+						>
+					</File>
+					<File
 						RelativePath=".\libwoopsi\include\rectcache.h"
 						>
 					</File>
